# back-office

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  SCAN-STATUS.md  buildspec-cd.yml  buildspec-ci.yml  package-lock.json  package.json  pyproject.toml
agents/: ada-audit.sh  cloud-ops-audit.sh  compliance-audit.sh  feature-dev.sh  fix-bugs.sh  monetization-audit.sh  og-remediation.sh  product-audit.sh  product-owner.sh  qa-scan.sh  seo-audit.sh  watch.sh
backoffice/: __main__.py  agent_api.py  agents.py  aggregate.py  api_server.py  audit_rotation.py  auth.py  backlog.py  budget_check.py  budgets.py  budgets_cli.py  cloud_migration_compare.py  config.py  config_drift.py  dashboard_data.py  deploy_control.py  errors.py  github_actions_history.py  mcp_server.py  mentor.py  migration_plan.py  overnight_state.py  plugins.py  policy.py  portable.py  portable_cli.py  preview.py  regression.py  remediation_plan.py  review.py  router.py  routines.py  routines_cli.py  runs_cli.py  server.py  setup.py  tasks.py  tokens_cli.py  workflow.py  workspaces.py
ci/: .env.example  Dockerfile  package-lock.json  package.json  pipeline.mjs  server.mjs  server.test.mjs
config/: api-config.example.yaml  backoffice.bunny.example.yaml  backoffice.codebuild.example.yaml  backoffice.example.yaml  qa-config.example.yaml  qa-config.yaml  targets.example.yaml
dashboard/: actions-history.html  ada-data.json  ada.html  analogify.html  app.js  back-office-hq.html  backlog.json  backoffice.html  chromahaus.html  compliance-data.json  compliance.html  control-plane.js  data.json  faq.html  (+33 more)
(+259 files in other folders)
