[project]
name = "backoffice"
version = "1.0.0"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
mcp = [
    "mcp>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["backoffice"]

[tool.coverage.report]
show_missing = true
